--- a/index.html
+++ b/index.html
@@ -1,17 +1,24 @@
 <html lang="en">
    <head>
-        <title>Sample HTML</title>
+        <title>Bar Qalan</title>
+       <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>This is a Heading</h1>
-    <h2>This is a Subheading</h2>
-    <p>This is a paragraph.</p>
-    <p>This is another paragraph with some <b>bold</b> and <i>italic</i> text.</p>
-    <p>This is a paragraph with a line break.<br>Here's the new line.</p>
+    <h1>Title</h1>
+    <p>Lorem ipsun dolor sit amet, consectetur adipisicing elit<br>
+       <b>Consequuntur</b> veniam iose hyfytk  jhvyv, ycdyhjuh no, temporibus<br>
+       vytdg vhgdhy kjfd, ojhea koyt toovbnx kjoke<br>
+       omnis<i>italic</i> text.
+    </p>
     <hr>
-    <p>This is a paragraph with a horizontal rule above.</p>
+    <p>This is a paragraph with a line break.<br>
+     <b><i>Here's the doron sit there you si </i></b>learn more about this<br>
+       buw juw lsnskis this may be treeng so you gooo<br>
+       ho ho ho referat rouity
+    </p>
     <a href="https://www.example.com">This is a link</a>
     <img src="https://www.example.com/image.jpg" alt="Sample Image">
+   <script src="source.js".</script>
 </body>
 </html>
 
