--- a/index.html
+++ b/index.html
@@ -1,25 +1,50 @@
 <html lang="en">
-   <head>
-        <title>Bar Qalan</title>
-       <link rel="stylesheet" href="styles.css">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>BTest 1</title>
+    <style>
+        h1 {
+            color: red;
+            text-decoration: line-through;
+        }
+        .eooo {
+            color: blue;
+            text-align: center;
+            background-color: yellow;
+        }
+    </style>
 </head>
 <body>
-    <h1>Title</h1>
-    <p>Lorem ipsun dolor sit amet, consectetur adipisicing elit<br>
-       <b>Consequuntur</b> veniam iose hyfytk  jhvyv, ycdyhjuh no, temporibus<br>
-       vytdg vhgdhy kjfd, ojhea koyt toovbnx kjoke<br>
-       omnis<i>italic</i> text.
-    </p>
-    <hr>
-    <p>This is a paragraph with a line break.<br>
-     <b><i>Here's the doron sit there you si </i></b>learn more about this<br>
-       buw juw lsnskis this may be treeng so you gooo<br>
-       ho ho ho referat rouity
-    </p>
-    <a href="https://www.example.com">This is a link</a>
-    <img src="https://www.example.com/image.jpg" alt="Sample Image">
-   <script src="source.js".</script>
+    <h1>i like racoons</h1>
+   <h6>  ruslana loh concret</h6>
+    <h2 class="eooo">lets goooooooooooooooooo</h2>
+    <p class="eooo">i love doing this</p>
+    <p> helppppppppppppp</p>
+    <p>mannnnnnnnnnnnnnnnnnn</p>
+    <ul>
+        <li>Itm 1</li>
+        <li>Itemuhbud2</li>
+        <li>gdfgdfgdfgdf 3</li>
+    </ul>g
+    <ol>
+        <li>gfdfgdgdfgfdg Item 1</li>
+        <li>eryer Item 2</li>
+        <li>Numberrhdfed Item 3</li>
+    </ol>
+    <table>
+        <tr>
+            <th>Header 1</th>
+            <th>Header 2</th>
+        </tr>
+        <tr>
+            <td>Row 1, Cell 1</td>
+            <td>Row 1, Cell 2</td>
+        </tr>
+        <tr>
+            <td>Row 2, Cell 1</td>
+            <td>Row 2, Cell 2</td>
+        </tr>
+    </table>
 </body>
 </html>
-
-   
