--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
 </head>
 <body>
     <h1>i like racoons</h1>
-   <h6>  ruslana loh concret</h6>
+   <h6>  rararararra</h6>
     <h2 class="eooo">lets goooooooooooooooooo</h2>
     <p class="eooo">i love doing this</p>
     <p> helppppppppppppp</p>
-    <p>mannnnnnnnnnnnnnnnnnn</p>
+    <i>aplllllllljjj</i>
+    <p><b>mannnnnnnnnnnnnnnnnnn</b></p>
     <ul>
         <li>Itm 1</li>
         <li>Itemuhbud2</li>
@@ -32,15 +33,20 @@
         <li>eryer Item 2</li>
         <li>Numberrhdfed Item 3</li>
     </ol>
+    <img src="https://images.app.goo.gl/B9oagNm6Sgu2c8Dg7" alt="micccc">
     <table>
+        <a href="https://images.app.goo.gl/TWCTp9G8fJ5wTegL6">Click me!</a>
         <tr>
             <th>Header 1</th>
             <th>Header 2</th>
+            
         </tr>
+        <hr>bonus challange</hr>
         <tr>
             <td>Row 1, Cell 1</td>
             <td>Row 1, Cell 2</td>
         </tr>
+        <br>parks to vosit in Albania</br>
         <tr>
             <td>Row 2, Cell 1</td>
             <td>Row 2, Cell 2</td>
