--- a/thepage.html
+++ b/thepage.html
@@ -1,1 +1,9 @@
-
+<html>
+    <head>
+        <title>aboutmepage</title>
+    </head>
+    
+    <body>
+ <p>AND NOW THE END IS CLEAR AND SO I FACE MY FINAL CURTAIN (ah i forgot the lyrics)</p>
+    </body>
+</html>
