--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <li>eryer Item 2</li>
         <li>Numberrhdfed Item 3</li>
     </ol>
-    <img src="https://media.tenor.com/L2yGz-RI-KYAAAAd/the-voices-meme.gif" alt="micccc">
+    <img src="https://media.tenor.com/L2yGz-RI-KYAAAAd/the-voices-meme.gif" height= "400px" width= "400px" alt="micccc">
     <table>
       
         <tr>
