--- a/thepage.html
+++ b/thepage.html
@@ -5,5 +5,6 @@
     
     <body>
  <p>AND NOW THE END IS CLEAR AND SO I FACE MY FINAL CURTAIN (ah i forgot the lyrics)</p>
+        <img src="https://media.tenor.com/gHZBUr9HXdUAAAAd/wou-wonder-of-you.gif" alt="wou jojo reference">
     </body>
 </html>
