--- a/thepage.html
+++ b/thepage.html
@@ -5,6 +5,8 @@
     
     <body>
  <p>AND NOW THE END IS CLEAR AND SO I FACE MY FINAL CURTAIN (ah i forgot the lyrics)</p>
+        <a href="index.html">go back
+        </a>
         <img src="https://media.tenor.com/gHZBUr9HXdUAAAAd/wou-wonder-of-you.gif" alt="wou jojo reference">
     </body>
 </html>
