--- a/thepage.html
+++ b/thepage.html
@@ -1,12 +1,73 @@
-<html>
-    <head>
-        <title>aboutmepage</title>
-    </head>
-    
-    <body>
- <p>AND NOW THE END IS CLEAR AND SO I FACE MY FINAL CURTAIN (ah i forgot the lyrics)</p>
-        <a href="index.html">go back
-        </a>
-        <img src="https://media.tenor.com/gHZBUr9HXdUAAAAd/wou-wonder-of-you.gif" alt="wou jojo reference">
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>MBKetamine</title>
+    <style>
+        h1 {
+            color: red;
+        }
+
+        .eooo {
+            color: blue;
+            text-align: center;
+        }
+
+        body {
+            background-color: yellow;
+        }
+
+        /* Add padding and margin for divs */
+        .container {
+            padding: 20px;
+            margin: 10px;
+        }
+
+        /* Apply image filters */
+        .filtered-image {
+            filter: grayscale(50%) brightness(120%) contrast(90%);
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>i like racoons</h1>
+        <h6>rararararra</h6>
+        <h2 class="eooo">lets goooooooooooooooooo</h2>
+        <p class="eooo">i love doing this</p>
+        <p>helppppppppppppp</p>
+        <i>aplllllllljjj</i>
+        <p><b>yk i ran out of creative things to say, and i realized this looks really schizofrenic</b></p>
+        <ul>
+            <li>Itm 1</li>
+            <li>Itemuhbud2</li>
+            <li>gdfgdfgdfgdf 3</li>
+        </ul>
+        <a href="thepage.html">about page or something i dont know</a>
+        <ol>
+            <li>gfdfgdgdfgfdg Item 1</li>
+            <li>eryer Item 2</li>
+            <li>Numberrhdfed Item 3</li>
+        </ol>
+    </div>
+
+    <!-- Apply the image filter class to the image -->
+    <img class="filtered-image" src="https://media.tenor.com/L2yGz-RI-KYAAAAd/the-voices-meme.gif" height="400px" width="400px" alt="micccc">
+
+    <table class="container">
+        <tr>
+            <th>Header 1</th>
+            <th>Header 2</th>
+        </tr>
+        <tr>
+            <td>i hate making tables, Cell 1</td>
+            <td>Row 1, Cell 2</td>
+        </tr>
+        <tr>
+            <td>Row 2, Cell 1</td>
+            <td>Row 2, Cell 2</td>
+        </tr>
+    </table>
+</body>
 </html>
