--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         body {
             background-color: yellow;
         }
+
         /* Class Selector */
         .nav-bar {
             background-color: #333;
@@ -31,6 +32,37 @@
         .footer > p {
             font-style: italic;
             color: gray;
+        }
+
+        /* Pseudo-classes */
+        a:hover {
+            color: green;
+            text-decoration: underline;
+        }
+        
+        li:nth-child(even) {
+            background-color: lightgray;
+        }
+
+        input:focus {
+            border: 2px solid blue;
+        }
+
+        /* Pseudo-elements */
+        p::first-line {
+            font-weight: bold;
+        }
+
+        p::first-letter {
+            font-size: 1.5em;
+            color: purple;
+        }
+
+        /* Additional */
+        .portfolio-link {
+            display: block;
+            margin-top: 20px;
+            text-align: center;
     </style>
 </head>
 <body>
@@ -82,6 +114,39 @@
     <div class="footer">
         <p>&copy; 2023 MBKetamine. All rights reserved.</p>
     </div>
+    <!-- Using div to group content -->
+    <div class="footer">
+        <p>&copy; 2023 MBKetamine. All rights reserved.</p>
+    </div>
+    <!-- Using iframe to embed external content -->
+    <iframe src="https://www.example.com" width="600" height="400" frameborder="0" allowfullscreen></iframe>
+
+    <!-- Using div to group content -->
+    <div>
+        <p>This is a div container.</p>
+        <span>This is a span element inside the div.</span>
+    </div>
+
+    <!-- Using span for inline styling -->
+    <p>This is a <span style="color: green;">green</span> word in the paragraph.</p>
+
+    <!-- Using iframe to embed external content -->
+    <iframe src="https://www.example.com" width="600" height="400" frameborder="0" allowfullscreen></iframe>
+
+    <!-- Using div to group content -->
+    <div class="nav-bar">
+        <p>This is the navigation bar.</p>
+    </div>
+
+    <!-- Using div to group content -->
+    <div class="content">
+        <p>This is the main content of the page.</p>
+    </div>
+
+    <!-- Using div to group content -->
+    <div class="footer">
+        <p>&copy; 2023 MBKetamine. All rights reserved.</p>
+
 
     <table>
         <tr>
@@ -103,5 +168,11 @@
             <td colspan="2">heya</td>
         </tr>
     </table>
+     <!-- Pseudo-classes and Pseudo-elements -->
+    <div class="portfolio-link">
+        <a href="https://www.behance.net/search/projects?tracking_source=typeahead_search_direct&field=web+design&search=portfolio+design" target="_blank">
+            Check Behance for Design Ideas
+        </a>
+    </div>
 </body>
 </html>
