--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             color: green;
             text-decoration: underline;
         }
-        
+
         li:nth-child(even) {
             background-color: lightgray;
         }
@@ -63,6 +63,20 @@
             display: block;
             margin-top: 20px;
             text-align: center;
+        }
+
+        /* Visibility, Opacity, Display */
+        .hidden-element {
+            visibility: hidden;
+        }
+
+        .semi-transparent {
+            opacity: 0.5;
+        }
+
+        .invisible-element {
+            display: none;
+        }
     </style>
 </head>
 <body>
@@ -72,7 +86,9 @@
     <p class="eooo">i love doing this</p>
     <p>helppppppppppppp</p>
     <i>aplllllllljjj</i>
-    <p><b>yk i ran out of creative things to say, and i realized this looks really schizophrenic</b></p>
+    <p class="hidden-element"><b>Hidden Element</b></p>
+    <p class="semi-transparent"><b>Semi-Transparent Element</b></p>
+    <p class="invisible-element"><b>Invisible Element</b></p>
     <ul>
         <li>Itm 1</li>
         <li>Itemuhbud2</li>
@@ -84,40 +100,8 @@
         <li>eryer Item 2</li>
         <li>Numberrhdfed Item 3</li>
     </ol>
-    <img src="https://media.tenor.com/L2yGz-RI-KYAAAAd/the-voices-meme.gif" height= "400px" width= "400px" alt="micccc">
+    <img src="https://media.tenor.com/L2yGz-RI-KYAAAAd/the-voices-meme.gif" height="400px" width="400px" alt="micccc">
 
-    <!-- Using iframe to embed external content -->
-    <iframe src="https://www.example.com" width="600" height="400" frameborder="0" allowfullscreen></iframe>
-
-    <!-- Using div to group content -->
-    <div>
-        <p>This is a div container.</p>
-        <span>This is a span element inside the div.</span>
-    </div>
-
-    <!-- Using span for inline styling -->
-    <p>This is a <span style="color: green;">green</span> word in the paragraph.</p>
-    <!-- Using iframe to embed external content -->
-    <iframe src="https://www.example.com" width="600" height="400" frameborder="0" allowfullscreen></iframe>
-
-    <!-- Using div to group content -->
-    <div class="nav-bar">
-        <p>This is the navigation bar.</p>
-    </div>
-
-    <!-- Using div to group content -->
-    <div class="content">
-        <p>This is the main content of the page.</p>
-    </div>
-
-    <!-- Using div to group content -->
-    <div class="footer">
-        <p>&copy; 2023 MBKetamine. All rights reserved.</p>
-    </div>
-    <!-- Using div to group content -->
-    <div class="footer">
-        <p>&copy; 2023 MBKetamine. All rights reserved.</p>
-    </div>
     <!-- Using iframe to embed external content -->
     <iframe src="https://www.example.com" width="600" height="400" frameborder="0" allowfullscreen></iframe>
 
@@ -146,7 +130,42 @@
     <!-- Using div to group content -->
     <div class="footer">
         <p>&copy; 2023 MBKetamine. All rights reserved.</p>
+    </div>
 
+    <!-- Using div to group content -->
+    <div class="footer">
+        <p>&copy; 2023 MBKetamine. All rights reserved.</p>
+    </div>
+
+    <!-- Using iframe to embed external content -->
+    <iframe src="https://www.example.com" width="600" height="400" frameborder="0" allowfullscreen></iframe>
+
+    <!-- Using div to group content -->
+    <div>
+        <p>This is a div container.</p>
+        <span>This is a span element inside the div.</span>
+    </div>
+
+    <!-- Using span for inline styling -->
+    <p>This is a <span style="color: green;">green</span> word in the paragraph.</p>
+
+    <!-- Using iframe to embed external content -->
+    <iframe src="https://www.example.com" width="600" height="400" frameborder="0" allowfullscreen></iframe>
+
+    <!-- Using div to group content -->
+    <div class="nav-bar">
+        <p>This is the navigation bar.</p>
+    </div>
+
+    <!-- Using div to group content -->
+    <div class="content">
+        <p>This is the main content of the page.</p>
+    </div>
+
+    <!-- Using div to group content -->
+    <div class="footer">
+        <p>&copy; 2023 MBKetamine. All rights reserved.</p>
+    </div>
 
     <table>
         <tr>
@@ -159,20 +178,5 @@
         </tr>
         <tr>
             <td>Row 2, Cell 1</td>
-            <td>Row 2, Cell 2</td>
-        </tr>
-        <tr>
-            <td colspan="2">bonus challenge</td>
-        </tr>
-        <tr>
-            <td colspan="2">heya</td>
-        </tr>
-    </table>
-     <!-- Pseudo-classes and Pseudo-elements -->
-    <div class="portfolio-link">
-        <a href="https://www.behance.net/search/projects?tracking_source=typeahead_search_direct&field=web+design&search=portfolio+design" target="_blank">
-            Check Behance for Design Ideas
-        </a>
-    </div>
-</body>
-</html>
+            <td>Row
+
