--- a/index.html
+++ b/index.html
@@ -178,5 +178,22 @@
         </tr>
         <tr>
             <td>Row 2, Cell 1</td>
-            <td>Row
+            <td>Row 2, Cell 1</td>
+            <td>Row 2, Cell 2</td>
+        </tr>
+        <tr>
+            <td colspan="2">bonus challenge</td>
+        </tr>
+        <tr>
+            <td colspan="2">heya</td>
+        </tr>
+    </table>
+     <!-- Pseudo-classes and Pseudo-elements -->
+    <div class="portfolio-link">
+        <a href="https://www.behance.net/search/projects?tracking_source=typeahead_search_direct&field=web+design&search=portfolio+design" target="_blank">
+            Check Behance for Design Ideas
+        </a>
+    </div>
+</body>
+</html>
 
