--- a/index.html
+++ b/index.html
@@ -77,6 +77,34 @@
         .invisible-element {
             display: none;
         }
+        <!-- Added styles for padding and margin to .nav-bar, .content, and .footer -->
+
+    /* ... (previous styles) ... */
+
+    /* Class Selector */
+    .nav-bar {
+        background-color: #333;
+        color: white;
+        padding: 10px;
+        margin-bottom: 10px; /* Added margin */
+    }
+
+    /* Descendant Selector */
+    .content p {
+        font-size: 18px;
+        margin: 0; /* Remove default margin */
+        padding: 10px; /* Add padding */
+    }
+
+    /* Child Selector */
+    .footer > p {
+        font-style: italic;
+        color: gray;
+        margin-top: 10px; /* Added margin */
+    }
+
+    /* ... (remaining styles) ... */
+
     </style>
 </head>
 <body>
@@ -194,6 +222,24 @@
             Check Behance for Design Ideas
         </a>
     </div>
+    <!-- Added filter property to make the image grayscale -->
+<img src="https://media.tenor.com/L2yGz-RI-KYAAAAd/the-voices-meme.gif" height="400px" width="400px" alt="micccc" style="filter: grayscale(50%);">
+
+<!-- Added Grid and Flexbox examples with styles -->
+<!-- Grid -->
+<div class="grid-container">
+    <div style="background-color: lightblue; padding: 10px; text-align: center;">Grid Item 1</div>
+    <div style="background-color: lightgreen; padding: 10px; text-align: center;">Grid Item 2</div>
+    <div style="background-color: lightcoral; padding: 10px; text-align: center;">Grid Item 3</div>
+    <div style="background-color: lightgoldenrodyellow; padding: 10px; text-align: center;">Grid Item 4</div>
+    <div style="background-color: lightsalmon; padding: 10px; text-align: center;">Grid Item 5</div>
+    <div style="background-color: lightcyan; padding: 10px; text-align: center;">Grid Item 6</div>
+</div>
+
+<!-- Flexbox -->
+<div class="flex-container">
+    <!-- ... (existing content) ... -->
+</div>
 </body>
 </html>
 
