--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
 
     <!-- Using div to group content -->
     <div>
-        <p>This is a div container.</p>
-        <span>This is a span element inside the div.</span>
+        <p>BBBBBBBBBBBBBBBBbbbbbbbbbbbbb.</p>
+        <span>Ddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd</span>
     </div>
 
     <!-- Using span for inline styling -->
@@ -147,7 +147,7 @@
 
     <!-- Using div to group content -->
     <div class="nav-bar">
-        <p>This is the navigation bar.</p>
+        <p>Navigation bar.</p>
     </div>
 
     <!-- Using div to group content -->
@@ -157,12 +157,12 @@
 
     <!-- Using div to group content -->
     <div class="footer">
-        <p>&copy; 2023 MBKetamine. All rights reserved.</p>
+        <p>&copy; 2023 wooooooooooooooooooooooooow.</p>
     </div>
 
     <!-- Using div to group content -->
     <div class="footer">
-        <p>&copy; 2023 MBKetamine. All rights reserved.</p>
+        <p>&copy; 2023woooooooooooooooooooooooooooow.</p>
     </div>
 
     <!-- Using iframe to embed external content -->
@@ -170,8 +170,8 @@
 
     <!-- Using div to group content -->
     <div>
-        <p>This is a div container.</p>
-        <span>This is a span element inside the div.</span>
+        <p> container.</p>
+        <span>This is a HOHOHOHOHO.</span>
     </div>
 
     <!-- Using span for inline styling -->
@@ -182,17 +182,17 @@
 
     <!-- Using div to group content -->
     <div class="nav-bar">
-        <p>This is the navigation bar.</p>
+        <p>navigation bar.</p>
     </div>
 
     <!-- Using div to group content -->
     <div class="content">
-        <p>This is the main content of the page.</p>
+        <p>weeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeep.</p>
     </div>
 
     <!-- Using div to group content -->
     <div class="footer">
-        <p>&copy; 2023 MBKetamine. All rights reserved.</p>
+        <p>&copy; 2023 waaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaw</p>
     </div>
 
     <table>
