--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     <img src="https://media.tenor.com/L2yGz-RI-KYAAAAd/the-voices-meme.gif" height="400px" width="400px" alt="micccc">
 
     <!-- Using iframe to embed external content -->
-    <iframe src="https://images.app.goo.gl/AFP2uc8eEN1fmFJz6" width="600" height="400" frameborder="0" allowfullscreen></iframe>
+    <iframe src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.familio.ro%2Fstalp-de-zgariat-pentru-pisici-cu-trunchi-de-sisal-si-jucarii-turn-mic-gri-27-x-27-x-42-cm&psig=AOvVaw1i_owHN3hzy3576V8QByHP&ust=1701807754259000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCKih-IrO9oIDFQAAAAAdAAAAABAD" width="600" height="400" frameborder="0" allowfullscreen></iframe>
 
     <!-- Using div to group content -->
     <div>
