--- a/index.html
+++ b/index.html
@@ -102,6 +102,21 @@
         color: gray;
         margin-top: 10px; /* Added margin */
     }
+/* CSS Animation */
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+/* Apply animation to the header */
+h1 {
+    color: red;
+    animation: fadeIn 2s ease-in-out;
+}
 
     /* ... (remaining styles) ... */
 
@@ -240,6 +255,11 @@
 <div class="flex-container">
     <!-- ... (existing content) ... -->
 </div>
+    <!-- Tailwind CSS Link -->
+<link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+<!-- Bootstrap CSS Link -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
 </body>
 </html>
 
