--- a/thepage.html
+++ b/thepage.html
@@ -1,73 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <style>
+        body {
+    font-family: 'Arial', sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #f4f4f4;
+}
+
+header {
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    padding: 1rem;
+}
+
+section {
+    margin: 2rem;
+}
+
+ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+footer {
+    text-align: center;
+    padding: 1rem;
+    background-color: #333;
+    color: #fff;
+}
+
+        </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MBKetamine</title>
-    <style>
-        h1 {
-            color: red;
-        }
-
-        .eooo {
-            color: blue;
-            text-align: center;
-        }
-
-        body {
-            background-color: yellow;
-        }
-
-        /* Add padding and margin for divs */
-        .container {
-            padding: 20px;
-            margin: 10px;
-        }
-
-        /* Apply image filters */
-        .filtered-image {
-            filter: grayscale(50%) brightness(120%) contrast(90%);
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
+    <title>Your Name - Portfolio</title>
 </head>
 <body>
-    <div class="container">
-        <h1>i like racoons</h1>
-        <h6>rararararra</h6>
-        <h2 class="eooo">lets goooooooooooooooooo</h2>
-        <p class="eooo">i love doing this</p>
-        <p>helppppppppppppp</p>
-        <i>aplllllllljjj</i>
-        <p><b>yk i ran out of creative things to say, and i realized this looks really schizofrenic</b></p>
+    <header>
+        <h1>Your Name</h1>
+        <p>Computer Science Enthusiast</p>
+    </header>
+
+    <section id="about">
+        <h2>About Me</h2>
+        <p>Add a concise and engaging description about yourself.</p>
+    </section>
+
+    <section id="skills">
+        <h2>Skills</h2>
         <ul>
-            <li>Itm 1</li>
-            <li>Itemuhbud2</li>
-            <li>gdfgdfgdfgdf 3</li>
+            <li>Web Development</li>
+            <li>Programming Languages (e.g., HTML, CSS, JavaScript)</li>
+            <li>Problem Solving</li>
+            <!-- Add more skills as needed -->
         </ul>
-        <a href="thepage.html">about page or something i dont know</a>
-        <ol>
-            <li>gfdfgdgdfgfdg Item 1</li>
-            <li>eryer Item 2</li>
-            <li>Numberrhdfed Item 3</li>
-        </ol>
-    </div>
+    </section>
 
-    <!-- Apply the image filter class to the image -->
-    <img class="filtered-image" src="https://media.tenor.com/L2yGz-RI-KYAAAAd/the-voices-meme.gif" height="400px" width="400px" alt="micccc">
+    <section id="projects">
+        <h2>Projects</h2>
+        <!-- Include information about your projects, with images and descriptions -->
+    </section>
 
-    <table class="container">
-        <tr>
-            <th>Header 1</th>
-            <th>Header 2</th>
-        </tr>
-        <tr>
-            <td>i hate making tables, Cell 1</td>
-            <td>Row 1, Cell 2</td>
-        </tr>
-        <tr>
-            <td>Row 2, Cell 1</td>
-            <td>Row 2, Cell 2</td>
-        </tr>
-    </table>
+    <section id="education">
+        <h2>Education</h2>
+        <p>Your degree, university, graduation year, etc.</p>
+    </section>
+
+    <section id="contact">
+        <h2>Contact</h2>
+        <p>Email: your@email.com</p>
+        <!-- Add more contact information as needed -->
+    </section>
+
+    <footer>
+        <p>&copy; 2023 Your Name</p>
+    </footer>
 </body>
 </html>
+
